kubernetes/apps/audiobookshelf/audiobookshelf/30-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - image: ghcr.io/advplyr/audiobookshelf:2.19.3
          imagePullPolicy: Always
          name: audiobookshelf
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              cpu: 200m
              memory: 300Mi
          volumeMounts:
            - mountPath: /config
              name: audiobookshelf-data
              subPath: config
            - mountPath: /metadata
              name: audiobookshelf-data
              subPath: metadata
            - mountPath: "/audiobooks"
              readOnly: false
              name: audiobookshelf-smb-pvc
              subPath: Media/Audiobooks
      volumes:
        - name: audiobookshelf-data
          persistentVolumeClaim:
            claimName: audiobookshelf-data
        - name: audiobookshelf-smb-pvc
          persistentVolumeClaim:
            claimName: audiobookshelf-smb-pvc
