kubernetes/apps/audiobookshelf/audiobookshelf/40-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  type: ClusterIP
