kubernetes/apps/audiobookshelf/audiobookshelf/99-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ingressClassName: internal
  rules:
    - host: audiobooks.laboratory.casa
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: audiobookshelf-service
                port:
                  number: 80
